--- a/MyShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyShop.WebUI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductManager" asp-action="Index">Product Admin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductCategoryManager" asp-action="Index">Category Admin</a>
                         </li>
                     </ul>
                 </div>
